Added icons component

--- a/my-app/src/scss/_variables.scss
+++ b/my-app/src/scss/_variables.scss
@@ -12,6 +12,12 @@ $typography__font-size--s: 1rem;
 $color__primary--darker: #0f1f2a;
 $color__primary--dark: #192a32;
 $color__primary: #192a32;
+$color__primary--light:#1f3540;
+$color__primary--lighter:#243d49;
 $color__aqua: #32c0bb;
 $color__gray: #a9bec9;
 $color__gold: #f2b237;
+
+//SIZES
+
+$size__tile: 120px;
