--- a/my-app/src/components/atoms/Tile/Tile.module.scss
+++ b/my-app/src/components/atoms/Tile/Tile.module.scss
@@ -10,6 +10,7 @@
   border-radius: 8px;
   box-shadow: 0px 8px 0px 0px $color__primary--darker;
   cursor: pointer;
+  user-select: none;
   transition: 0.15s ease-in-out;
   &:hover{
     background-color: $color__primary--lighter;
