--- a/my-app/src/components/organism/Game/Game.module.scss
+++ b/my-app/src/components/organism/Game/Game.module.scss
@@ -2,10 +2,11 @@
 
 .container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
   background-color: $color__primary;
   color: $color__gray;
-  gap: 2rem;
+  gap: $size__tile--gap;
 }
