--- a/my-app/src/scss/_variables.scss
+++ b/my-app/src/scss/_variables.scss
@@ -1,5 +1,5 @@
 //TYPOGRAPHY
-$typography__font-family: 'Roboto', sans-serif;
+$typography__font-family: 'Nunito', sans-serif;
 $typography__font-weight--bold: 700;
 $typography__font-size--xxl: 5rem;
 $typography__font-size--xl: 3rem;
