Added highlighting of the winning tile

--- a/my-app/src/components/atoms/Icon/Icon.module.scss
+++ b/my-app/src/components/atoms/Icon/Icon.module.scss
@@ -7,3 +7,7 @@
 .nought {
   filter: invert(83%) sepia(41%) saturate(974%) hue-rotate(330deg) brightness(99%) contrast(92%);
 }
+
+.winningIcon {
+  filter:invert(11%) sepia(13%) saturate(1745%) hue-rotate(154deg) brightness(100%) contrast(91%) !important;
+}
