Changed tile size on smaller devices

--- a/my-app/src/components/atoms/Tile/Tile.module.scss
+++ b/my-app/src/components/atoms/Tile/Tile.module.scss
@@ -15,6 +15,12 @@
   &:hover{
     background-color: $color__primary--lighter;
   }
+
+  @media (max-width: 576px){
+    min-width: 80px;
+    min-height: 80px;
+  }
+  
 }
 
 .winningTileCross {
