improved margins, size of icons and font size on smaller devices

--- a/my-app/src/components/atoms/Headline/Headline.module.scss
+++ b/my-app/src/components/atoms/Headline/Headline.module.scss
@@ -3,6 +3,9 @@
 .headline {
   font-size: $typography__font-size--l;
   letter-spacing: 3px;
+  @media (max-width:568px) {
+    font-size: $typography__font-size--r;
+  }
 }
 
 .cross {
