--- a/my-app/src/components/atoms/Icon/Icon.module.scss
+++ b/my-app/src/components/atoms/Icon/Icon.module.scss
@@ -9,5 +9,5 @@
 }
 
 .winningIcon {
-  filter:invert(11%) sepia(13%) saturate(1745%) hue-rotate(154deg) brightness(100%) contrast(91%) !important;
+  filter:invert(11%) sepia(13%) saturate(1745%) hue-rotate(154deg) brightness(100%) contrast(91%);
 }
