--- a/my-app/src/components/organism/Game/Game.module.scss
+++ b/my-app/src/components/organism/Game/Game.module.scss
@@ -14,10 +14,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 1rem 0
+  margin: 1.5rem 0;
 }
-
-
 
 .boardContainer {
   display: flex;
